--- a/index.html
+++ b/index.html
@@ -149,8 +149,14 @@
             </div>
 
             <div class="seperator"></div>
-
             <!-- ----------------------------7---------------------------------- -->
+
+            <h1 class="gameTitle">Футбол</h1>
+
+            <div class="pitch">
+               <img src="./img/ball.svg" class="ball" alt="ball">
+            </div>
+            <div class="seperator"></div>
             <!-- ----------------------------8---------------------------------- -->
 
             <h1 class="gameTitle">Введіть 3 числа</h1>
