--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <!-- ----------------------------5---------------------------------- -->
             <h1 class="gameTitle">Калькулятор часу</h1>
             
-            <div class="cho">
+            <div id="cho">
                <div class="chorn">
                   <input type="text" id="inpMinute" placeholder="Введіть число">
                   <i class="fa fa-search icon" aria-hidden="true"></i>
@@ -169,6 +169,40 @@
             <p class="eightResult">Найбільше число, яке ви ввели - </p>
 
             <div class="seperator"></div>
+            <!-- ----------------------------9---------------------------------- -->
+            <!-- <div class="seperator"></div> -->
+            <!-- ----------------------------10---------------------------------- -->
+
+            <!-- <h1 class="gameTitle">Обери вченого/их</h1> -->
+
+            <!-- <div class="scientists-container">
+               <div class="scientist"></div>
+               <div class="scientist"></div>
+               <div class="scientist"></div>
+               <div class="scientist"></div>
+               <div class="scientist"></div>
+               <div class="scientist"></div>
+               <div class="scientist"></div>
+               <div class="scientist"></div>
+               <div class="scientist"></div>
+               <div class="scientist"></div>
+               <div class="scientist"></div>
+               <div class="scientist"></div>
+            </div>
+
+            <div class="filters">
+               <button class="filter">Які вчені народилися в 19 ст</button>
+               <button class="filter">Відсортувати вчених за алфавітом</button>
+               <button class="filter">Відсортувати вчених за кількістю прожитих років</button>
+               <button class="filter">Знайти вченого, який народився найпізніше</button>
+               <button class="filter">Знайти рік народження Albert Einshtein</button>
+               <button class="filter">Знайти вчених, прізвища яких починаються на на літеру “С”</button>
+               <button class="filter">Видалити всіх вчених, ім’я яких починається на “А”</button>
+               <button class="filter">Знайти вченого, який прожив найдовше і вченого,
+               який прожив найменше</button>
+               <button class="filter">Знайти вчених, в яких співпадають перші літери імені і прізвища</button>
+            </div> -->
+
 
          </main>
       </section>
