--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
          <div class="theme">
             <label class="switch">
-               <input type="checkbox" id="btnSwitch" />
+               <input type="checkbox" id="btnSwitch"/>
                <span class="slider round"></span>
             </label>
             <p>Вітаємо, <span>User</span></p>
@@ -104,10 +104,10 @@
                <input type="text" class="firstNum" placeholder="Введіть число">
             
                <div class="actions">
-                  <button onclick="addNumbers()" class="buttonAction"><img src="./img/icon/calculate/add.svg" alt=""></button>
-                  <button onclick="mulNumbers()" class="buttonAction"><img src="./img/icon/calculate/mul.svg" alt=""></button>
-                  <button onclick="subNumbers()" class="buttonAction"><img src="./img/icon/calculate/sub.svg" alt=""></button>
-                  <button onclick="divideNumbers()" class="buttonAction"><img src="./img/icon/calculate/divide.svg" alt=""></button>
+                  <button onclick="addNumbers()" class="buttonAction"><img src="./img/icon/calculate/add.png" alt=""></button>
+                  <button onclick="mulNumbers()" class="buttonAction"><img src="./img/icon/calculate/multiply.png" alt=""></button>
+                  <button onclick="subNumbers()" class="buttonAction"><img src="./img/icon/calculate/subtract.png" alt=""></button>
+                  <button onclick="divideNumbers()" class="buttonAction"><img src="./img/icon/calculate/divide.png" alt=""></button>
                </div>
             
                <input type="text" class="secondNum" placeholder="Введіть число">
@@ -227,7 +227,7 @@
          </main>
       </section>
 
-      <footer>
+      <footer class="footer">
          <div class="footer-logo"></div>
          <p class="footer-info">
             Тел: +38 (123) 456 78 90 <br />
@@ -295,5 +295,6 @@
       <script src="./js/football.js"></script>
       <script src="./js/chooseScientists.js"></script>
       <script src="./js/slider.js"></script>
+      <script src="./js/darkTheme.js"></script>
    </body>
 </html>
