--- a/model.html
+++ b/model.html
@@ -33,13 +33,13 @@
         <i class="icon-sword"></i>
     </div>
 
-    <!-- <div class="modal-subscribe">
+    <div class="modal-subscribe">
         <p class="title">Дякую за підписку!</p>
         <i class="icon-close"></i>
         <i class="icon-bar"></i>
         <i class="icon-gameBar"></i>
         <i class="icon-puzzle"></i>
         <i class="icon-sword"></i>
-    </div> -->
+    </div>
 </body>
 </html>
